--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
   <div class="container">
     <div class="col-md-10 col-md-offset-1 text-center">
       <p>Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <br><br>
-
       Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur. Cras mattis consectetur purus sit amet avida at eget metus.</p>
     </div>
   </div>
@@ -120,7 +119,7 @@
         <!-- overlay -->
         </a> </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/work-7.jpg" class="work-box"> <img src="images/work-7.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay">￼
           <div class="overlay-caption">
             <h5>Project Name</h5>
             <p>Branding</p>
